<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Album Cover Image -->
    <ImageView
        android:id="@+id/album_cover_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/placeholder_album_cover"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true" />

    <!-- Song Title -->

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/album_cover_image"
        android:layout_alignTop="@id/album_cover_image"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/song_title" />

    <!-- Artist Name -->
    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_title"
        android:layout_toEndOf="@id/album_cover_image"
        android:textSize="16sp"
        android:text="@string/artist_name" />

    <!-- Album Name -->
    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artist_name"
        android:layout_toEndOf="@id/album_cover_image"
        android:textSize="16sp"
        android:text="@string/album_name" />

    <!-- Song Duration -->
    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_name"
        android:layout_toEndOf="@id/album_cover_image"
        android:textSize="16sp"
        android:text="@string/duration" />

</RelativeLayout>