<?xml version="1.0" encoding="utf-8"?>

<!--
    File: item_recipe.xml
    Purpose: Layout file for each item in the RecyclerView of recipes.
    Author: Beulah Nwokotubo
    Lab Section: 013
    Creation Date: 28th March, 2024
-->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="#FFFFFF"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <!-- Linear layout to hold image, title, and buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Linear layout for buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!-- Button to unsave recipe -->
            <ImageButton
                android:id="@+id/unSaveButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_delete"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/unsave_recipe"
                android:layout_marginStart="16dp" />

            <!-- Button to view recipe source -->
            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_link"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/external_link"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <!-- Image view for recipe image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/my_recipe_image"/>

        <!-- Text view for recipe title -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#9054A9"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>